--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/images/favicon-32x32.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/images/favicon-32x32.png" />
     <title>Philipp Kraatz' finance app</title>
     <style>
       .attribution {
@@ -22,8 +22,9 @@
       <script type="module" src="./src/main.tsx"></script>
     </main>
     <footer class="attribution">
-      Coding challenge by <a href="https://www.frontendmentor.io/challenges" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/kephalosk">Philipp Kraatz</a>.
+      Coding challenge by
+      <a href="https://www.frontendmentor.io/challenges" target="_blank">Frontend Mentor</a>. Coded
+      by <a href="https://github.com/kephalosk">Philipp Kraatz</a>.
     </footer>
   </body>
 </html>
