--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="src/assets/images/favicon-32x32.png" />
     <title>Philipp Kraatz' finance</title>
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+      }
+
       .attribution {
         font-size: 11px;
         text-align: center;
