--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,15 @@
         flex-direction: column;
       }
 
+      html {
+        height: 100%;
+      }
+
       main {
+        height: 100%;
+      }
+
+      .appSpace {
         height: 100%;
       }
 
@@ -30,7 +38,7 @@
   </head>
   <body>
     <main>
-      <div id="root"></div>
+      <div class="appSpace" id="root"></div>
       <script type="module" src="./src/main.tsx"></script>
     </main>
     <footer class="attribution">
