--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,21 +9,22 @@
       body {
         margin: 0;
         padding: 0;
-        height: 100%;
+        height: auto;
+        min-height: 100vh;
         display: flex;
         flex-direction: column;
       }
 
       html {
-        height: 100%;
+        height: auto;
       }
 
       main {
-        height: 100%;
+        height: auto;
       }
 
       .appSpace {
-        height: 100%;
+        height: auto;
       }
 
       .attribution {
