--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,7 @@
         bottom: 0;
         font-size: 11px;
         text-align: center;
+        z-index: 100;
       }
 
       .attribution a {
