--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,42 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicon-32x32.png" />
     <title>Philipp Kraatz' finance</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        height: auto;
-        min-height: auto;
-        display: flex;
-        flex-direction: column;
-      }
-
-      html {
-        height: auto;
-      }
-
-      main {
-        height: auto;
-      }
-
-      .appSpace {
-        min-height: calc(100vh - 14px);
-      }
-
-      .attribution {
-        background-color: #ffffff;
-        width: 100%;
-        position: fixed;
-        bottom: 0;
-        font-size: 11px;
-        text-align: center;
-        z-index: 100;
-      }
-
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="./src/styles/styles.scss">
   </head>
   <body>
     <main>
